fixed options spacing
removed changing opacity

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -41,8 +41,8 @@ body {
   font-weight: bold;
   font-style: italic;
   position: relative;
-  margin: 0.4rem;
-  padding: 0.4rem;
+  margin: -1rem;
+  padding: 1rem;
 }
 
 // Define a mixin for rounded corners
